--- a/Dance of the bees Batchrunner Data.ipynb
+++ b/Dance of the bees Batchrunner Data.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Gebruiksaanwijzing;\n",
     "1. **Geef het absolute pad op naar de folder waar de folder 'IntelligentBeesChallenge' zich in bevindt.**\n",
-    "2. Stel parameters op voor de simulatie, deze kan je onderverdelen in variable en fixed parameters die je hier ook onder kan definieren. **Let op: voor variable parameters moet je een range object opgeven**\n",
+    "2. Stel parameters op voor de simulatie, deze kan je onderverdelen in variable en fixed parameters die je hier ook onder kan definieren. **Let op: voor variable parameters moet je een range object opgeven, of een lijst met alle mogelijke variaties van de parameter**\n",
     "3. Zorg ervoor dat alle parameters zijn ingedeeld in of variable of fixed parameters en run dan alle cells."
    ]
   },
@@ -41,12 +41,18 @@
     "\"nectar_respawn_interval\" : Aantal timesteps dat minimaal verstrijkt voordat nectar terug komt op een bloemenveld \\\n",
     "\"max_bee_energy\" : Capaciteit energie die een bij kan hebben nadat hij bij een bijenkorf geweest is en aan het begin \\\n",
     "\"collect_negative_value_nectar\" : Collect negative value nectar (?) \\\n",
-    "\"perception_range\" : Hoe ver de bij kan zien om bloemenvelden/nectar te identificeren en op te slaan in memory."
+    "\"perception_range\" : Hoe ver de bij kan zien om bloemenvelden/nectar te identificeren en op te slaan in memory. \\\n",
+    "\"preset\": Of de simulatie telkens een vaste, al-gedefinieerde omgeving moet gebruiken (zie foto hieronder) \\\n",
+    "\"max_clue_radius\": Hoe ver een gegeven clue op reset van de daadwerkelijke clue kan zitten (radius) \\\n",
+    "\"min_flower_distance\": Hoe ver bloemen minimaal uit elkaar zitten (radius waarin geen bloemen rondom een bloem kan spawnen) \\\n",
+    "\"hivemind_events\": Of bijen gegeven een aantal tijdstappen (zie hieronder) \\\n",
+    "\"hivemind_interval\": Hoe lang het duurt in tijdstappen voordat telkens een hivemind event plaatsvindt, mits deze\n",
+    "toegestaan zijn (zie hierboven)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 1,
    "id": "65f23cf7",
    "metadata": {},
    "outputs": [],
@@ -73,18 +79,22 @@
     "    \"nectar_respawn_interval\": 100,\n",
     "    \"collect_negative_value_nectar\": False,\n",
     "    \"perception_range\": 1,\n",
-    "    \"max_bee_energy\": 50, \n",
+    "    \"max_bee_energy\": 20, \n",
+    "    \"preset\": False,\n",
+    "    \"min_flower_distance\": 5,\n",
+    "    \"init_flowers\": 9,\n",
+    "    \"max_clue_radius\": 0,\n",
     "}\n",
     "\n",
     "variable_params = {\n",
-    "    \"init_flowers\": [3,5,7,9],\n",
-    "    \"max_clue_radius\": [0, 5, 10, 15, 20]\n",
+    "    \"hivemind_events\": [True, False],\n",
+    "    \"hivemind_interval\": [10, 20, 40],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 2,
    "id": "797b3619",
    "metadata": {},
    "outputs": [],
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 3,
    "id": "f5605f71",
    "metadata": {},
    "outputs": [],
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 4,
    "id": "05df391e",
    "metadata": {
     "scrolled": true
@@ -119,7 +129,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4000it [12:05,  5.51it/s]\n"
+      "0it [00:02, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "attempt to get argmax of an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"c:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\multiprocessing\\pool.py\", line 125, in worker\n    result = (True, func(*args, **kwds))\n  File \"c:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\mesa\\batchrunner.py\", line 493, in _run_wrappermp\n    model.step()\n  File \"C:\\Users\\gvand\\Projecten\\Pycharm\\IntelligentBeesChallenge\\bee_simulation\\model.py\", line 152, in step\n    assignments = helpers.assign_tasks(valuedataframe)\n  File \"C:\\Users\\gvand\\Projecten\\Pycharm\\IntelligentBeesChallenge\\bee_simulation\\helpers.py\", line 203, in assign_tasks\n    task = get_task(df)\n  File \"C:\\Users\\gvand\\Projecten\\Pycharm\\IntelligentBeesChallenge\\bee_simulation\\helpers.py\", line 41, in get_task\n    agent_with_highest_value = highest_task_values.idxmax()\n  File \"c:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pandas\\core\\series.py\", line 2354, in idxmax\n    i = self.argmax(axis, skipna, *args, **kwargs)\n  File \"c:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pandas\\core\\base.py\", line 647, in argmax\n    return nanops.nanargmax(  # type: ignore[return-value]\n  File \"c:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pandas\\core\\nanops.py\", line 93, in _f\n    return f(*args, **kwargs)\n  File \"c:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\pandas\\core\\nanops.py\", line 1070, in nanargmax\n    result = values.argmax(axis)  # type: ignore[var-annotated]\nValueError: attempt to get argmax of an empty sequence\n\"\"\"",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10144/1395910257.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m                             \u001b[1;34m\"Steps past\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mget_steps\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m                         })\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0mbatch_run\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[0mmodel_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbatch_run\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_model_vars_dataframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mcollector_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbatch_run\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_collector_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\mesa\\batchrunner.py\u001b[0m in \u001b[0;36mrun_all\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    546\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprocesses\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    547\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_iterations\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdisable\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay_progress\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpbar\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 548\u001b[1;33m                 for params, model in self.pool.imap_unordered(\n\u001b[0m\u001b[0;32m    549\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_run_wrappermp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrun_iter_args\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    550\u001b[0m                 ):\n",
+      "\u001b[1;32mc:\\users\\gvand\\appdata\\local\\programs\\python\\python38\\lib\\multiprocessing\\pool.py\u001b[0m in \u001b[0;36mnext\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m    866\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msuccess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    867\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 868\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    869\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    870\u001b[0m     \u001b[0m__next__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnext\u001b[0m                    \u001b[1;31m# XXX\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: attempt to get argmax of an empty sequence"
      ]
     }
    ],
@@ -132,7 +158,6 @@
     "                        max_steps=1000,\n",
     "                        model_reporters={\n",
     "                            \"Nectar/T\": get_nectar_per_t,\n",
-    "                            \"Bee energy\": get_bee_energy,\n",
     "                            \"Nectar stored\": get_hive_energy,\n",
     "                            \"Nectar Collected\": get_nectar_collected,\n",
     "                            \"Steps past\": get_steps,\n",
@@ -144,130 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "id": "07c46951",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>steps_past</th>\n",
-       "      <th>init_flowers</th>\n",
-       "      <th>max_clue_radius</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>70</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2658</th>\n",
-       "      <td>150</td>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2659</th>\n",
-       "      <td>70</td>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2660</th>\n",
-       "      <td>70</td>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2661</th>\n",
-       "      <td>70</td>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1339</th>\n",
-       "      <td>120</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1340</th>\n",
-       "      <td>70</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1341</th>\n",
-       "      <td>107</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1328</th>\n",
-       "      <td>70</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3999</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>9</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      steps_past  init_flowers  max_clue_radius\n",
-       "0             70             3                0\n",
-       "2658         150             7               15\n",
-       "2659          70             7               15\n",
-       "2660          70             7               15\n",
-       "2661          70             7               15\n",
-       "...          ...           ...              ...\n",
-       "1339         120             5                5\n",
-       "1340          70             5                5\n",
-       "1341         107             5                5\n",
-       "1328          70             5                5\n",
-       "3999        1000             9               20\n",
-       "\n",
-       "[4000 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 275,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = model_data[['Steps past', 'init_flowers', 'max_clue_radius']]\n",
     "df = df.rename(columns={'Steps past': 'steps_past'})\n",
@@ -276,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "id": "b4e2c069",
    "metadata": {},
    "outputs": [],
